# nvidiagpu_top

./: Cargo.toml  README.md
src/: app.rs  data.rs  main.rs  parser.rs  process.rs
src/ui/: charts.rs  dashboard.rs  info.rs  memory.rs  mod.rs  processes.rs  status.rs  table.rs  topology.rs
